Bug #76558 --> clear the content type before reading from the cache channel. sr=bienvenu