mailnews/news/src/nsNNTPProtocol.cpp
@@ -742,6 +742,7 @@ nsresult nsNNTPProtocol::ReadFromMemCache(nsICacheEntryDescriptor *entry)
     cacheListener->Init(m_channelListener, NS_STATIC_CAST(nsIChannel *, this), mailnewsUrl);
     
     nsCOMPtr<nsIRequest> request;
+    m_ContentType = ""; // reset the content type for the upcoming read....
     rv = cacheTransport->AsyncRead(cacheListener, m_channelContext, 0, PRUint32(-1), 0, getter_AddRefs(request));
     NS_RELEASE(cacheListener);
  
@@ -749,7 +750,6 @@ nsresult nsNNTPProtocol::ReadFromMemCache(nsICacheEntryDescriptor *entry)
     if (NS_SUCCEEDED(rv)) // ONLY if we succeeded in actually starting the read should we return
     {
       // we're not calling nsMsgProtocol::AsyncRead(), which calls nsNNTPProtocol::LoadUrl, so we need to take care of some stuff it does.
-      m_ContentType = "";
       m_channelListener = nsnull;
       return rv;
     }
